# xgrep

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: fixtures.toml  search.rs  sst_parse.rs
docs/superpowers/perf/: v0.2-bench-report.md
docs/superpowers/plans/: 2026-05-27-xgrep-v0.1.md  2026-05-28-xgrep-v0.2.1.md  2026-05-28-xgrep-v0.2.2.md  2026-05-28-xgrep-v0.2.md  2026-05-28-xgrep-v0.3.md
docs/superpowers/specs/: 2026-05-27-xgrep-design.md  2026-05-28-xgrep-v0.2-design.md  2026-05-28-xgrep-v0.2.1-design.md  2026-05-28-xgrep-v0.2.2-design.md  2026-05-28-xgrep-v0.3-design.md
src/: cell.rs  config.rs  error.rs  lib.rs  main.rs  matcher.rs  printer.rs  reader.rs  walker.rs  worker.rs
src/reader/: cells.rs  comments.rs  csv.rs  fast_path.rs  hidden.rs  mod.rs  oracle.rs  sst.rs  xml_scan.rs  zip_index.rs
tests/: it.rs
tests/fixtures/: corrupt.xlsx  encrypted.xlsx
tests/it/: basic.rs  comments.rs  common.rs  context_lines.rs  csv_basic.rs  env_disable.rs  errors.rs  extras.rs  fast_path_specific.rs  formulas.rs  hidden.rs  output.rs  perf_oracle.rs  sst.rs
xtask/: Cargo.toml
xtask/src/: main.rs
