[package]
name = "xgrep"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Excel-aware grep — search .xlsx files with rg-style UX"
license = "MIT OR Apache-2.0"

[[bin]]
name = "xgrep"
path = "src/main.rs"

[lib]
name = "xgrep"
path = "src/lib.rs"

[dependencies]
calamine = "0.26"
regex = "1.10"
ignore = "0.4"
termcolor = "1.4"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = "2"
globset = "0.4"
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
tempfile = "3"
rust_xlsxwriter = "0.79"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
