[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "xgrep"
version = "0.3.1"
edition = "2021"
rust-version = "1.75"
description = "Excel-aware grep — search .xlsx, .csv, and .tsv files with rg-style UX"
license = "MIT OR Apache-2.0"

[[bin]]
name = "xgrep"
path = "src/main.rs"

[lib]
name = "xgrep"
path = "src/lib.rs"

[dependencies]
calamine = { version = "0.26", features = ["dates"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1.10"
ignore = "0.4"
termcolor = "1.4"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = "2"
globset = "0.4"
anyhow = "1"
thiserror = "2"
csv = "1.3"
encoding_rs = "0.8"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
tempfile = "3"
rust_xlsxwriter = "0.79"
criterion = "0.5"

[[bench]]
name = "search"
harness = false

[[bench]]
name = "sst_parse"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
